--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Netmatters Rebuild
+<html>
+    <head>
+        <title>Netmatters Rebuild</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/application.css">
+    </head>
+    <body>
+        <!-- Header -->
+        <div class="grid"></div>
+
+         <!-- Banner -->
+        <div class="grid"></div>
+
+         <!-- Header -->
+         <div class="grid"></div>
+
+         <!-- Footer -->
+         <div class="grid"></div>
+    </body>
+</html>
