--- a/index.html
+++ b/index.html
@@ -6,15 +6,34 @@
     </head>
     <body>
         <!-- Header -->
+        <div class="grid">
+            <header class="grid__col--12 panel--padded--centered" role="banner"> 
+                <a class="site-logo" href="/">
+                  <b class="srt">Poly - UI Toolkit</b>
+                </a>
+                <nav class="navbar" role="navigation">
+                  <span class="icn-toggle">
+                    <b class="srt">Toggle</b>
+                  </span>
+                  <ul class="nav">
+                    <li class="nav__item"><a href="#">Typography</a></li>
+                    <li class="nav__item"><a href="#">Buttons</a></li>
+                    <li class="nav__item"><a href="#">Forms</a></li>
+                    <li class="nav__item"><a href="#">Images</a></li>
+                    <li class="nav__item"><a href="#">Grid</a></li>
+                    <li class="nav__item--current"><a href="#">Navigation</a></li>
+                  </ul>
+                </nav>     
+            </header> 
+        </div>
+
+        <!-- Banner -->
         <div class="grid"></div>
 
-         <!-- Banner -->
+        <!-- Header -->
         <div class="grid"></div>
 
-         <!-- Header -->
-         <div class="grid"></div>
-
-         <!-- Footer -->
-         <div class="grid"></div>
+        <!-- Footer -->
+        <div class="grid"></div>
     </body>
 </html>
