--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Netmatters Rebuild</title>
+        <title>Netmatters Rebuild by Mark Jason Acab</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/application.css">
     </head>
@@ -8,21 +8,27 @@
         <!-- Header -->
         <div class="grid">
             <header class="grid__col--12 panel--padded--centered" role="banner"> 
-                <a class="site-logo" href="/">
-                  <b class="srt">Poly - UI Toolkit</b>
-                </a>
+                <div class="header">
+                    <a class="site-logo" href="/">
+                        <b class="srt">Netmatters</b>
+                    </a>
+                    <div class="header-links">
+                        <a href="#">support</a>
+                        <a href="#">contact</a>
+                        <div class="search"><a href="#"><span class="glyphicon glyphicon-search"></span></a></div>
+                        <div class="hamburger"><a href="#"><span class=""></span></a></div>
+                    </div>
+                </div>
                 <nav class="navbar" role="navigation">
-                  <span class="icn-toggle">
-                    <b class="srt">Toggle</b>
-                  </span>
-                  <ul class="nav">
-                    <li class="nav__item"><a href="#">Typography</a></li>
-                    <li class="nav__item"><a href="#">Buttons</a></li>
-                    <li class="nav__item"><a href="#">Forms</a></li>
-                    <li class="nav__item"><a href="#">Images</a></li>
-                    <li class="nav__item"><a href="#">Grid</a></li>
-                    <li class="nav__item--current"><a href="#">Navigation</a></li>
-                  </ul>
+                    <ul class="nav">
+                        <li class="nav__item"><a href="#">Bespoke Software</a></li>
+                        <li class="nav__item"><a href="#">IT Support</a></li>
+                        <li class="nav__item"><a href="#">Digital Marketing</a></li>
+                        <li class="nav__item"><a href="#">Telecoms Services</a></li>
+                        <li class="nav__item"><a href="#">Web Design</a></li>
+                        <li class="nav__item"><a href="#">Cyber Security</a></li>
+                        <li class="nav__item"><a href="#">Developer Course</a></li>
+                    </ul>
                 </nav>     
             </header> 
         </div>
