revised header elements and added grid styles

--- a/index.html
+++ b/index.html
@@ -5,33 +5,32 @@
         <link rel="stylesheet" href="css/application.css">
     </head>
     <body>
-        <!-- Header -->
-        <div class="grid">
-            <header class="grid__col--12 panel--padded--centered" role="banner"> 
-                <div class="header">
-                    <a class="site-logo" href="/">
-                        <b class="srt">Netmatters</b>
-                    </a>
-                    <div class="header-links">
-                        <a href="#">support</a>
-                        <a href="#">contact</a>
-                        <div class="search"><a href="#"><span class="glyphicon glyphicon-search"></span></a></div>
-                        <div class="hamburger"><a href="#"><span class=""></span></a></div>
-                    </div>
+        <!-- Header -->      
+        <header class="grid"> 
+            <div class="header">
+                <a class="site-logo" href="/">
+                    <b class="srt">Netmatters</b>
+                </a>
+                <div class="header-links">
+                    <a href="#">support</a>
+                    <a href="#">contact</a>
+                    <div class="search"><a href="#"><span class="glyphicon glyphicon-search"></span></a></div>
+                    <div class="hamburger"><a href="#"><span class=""></span></a></div>
                 </div>
-                <nav class="navbar" role="navigation">
-                    <ul class="nav">
-                        <li class="nav__item"><a href="#">Bespoke Software</a></li>
-                        <li class="nav__item"><a href="#">IT Support</a></li>
-                        <li class="nav__item"><a href="#">Digital Marketing</a></li>
-                        <li class="nav__item"><a href="#">Telecoms Services</a></li>
-                        <li class="nav__item"><a href="#">Web Design</a></li>
-                        <li class="nav__item"><a href="#">Cyber Security</a></li>
-                        <li class="nav__item"><a href="#">Developer Course</a></li>
-                    </ul>
-                </nav>     
-            </header> 
-        </div>
+            </div>
+            <nav class="navbar">
+                <ul class="nav">
+                    <li class="nav__item"><a href="#">Bespoke Software</a></li>
+                    <li class="nav__item"><a href="#">IT Support</a></li>
+                    <li class="nav__item"><a href="#">Digital Marketing</a></li>
+                    <li class="nav__item"><a href="#">Telecoms Services</a></li>
+                    <li class="nav__item"><a href="#">Web Design</a></li>
+                    <li class="nav__item"><a href="#">Cyber Security</a></li>
+                    <li class="nav__item"><a href="#">Developer Course</a></li>
+                </ul>
+            </nav>
+        </header> 
+        
 
         <!-- Banner -->
         <div class="grid"></div>
