refined the havigation elements

--- a/index.html
+++ b/index.html
@@ -20,13 +20,48 @@
             </div>
             <nav class="navbar">
                 <ul class="nav">
-                    <li class="nav__item"><a href="#">Bespoke Software</a></li>
-                    <li class="nav__item"><a href="#">IT Support</a></li>
-                    <li class="nav__item"><a href="#">Digital Marketing</a></li>
-                    <li class="nav__item"><a href="#">Telecoms Services</a></li>
-                    <li class="nav__item"><a href="#">Web Design</a></li>
-                    <li class="nav__item"><a href="#">Cyber Security</a></li>
-                    <li class="nav__item"><a href="#">Developer Course</a></li>
+                    <li class="nav__item">
+                        <a href="#">
+                            <small>Bespoke</small>
+                            Software
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#">
+                            <small>IT</small>
+                            Support
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#">
+                            <small>Digital</small>
+                            Marketing
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#">
+                            <small>Telecoms</small>
+                            Services
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#">
+                            <small>Web</small>
+                            Design
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#">
+                            <small>Cyber</small>
+                            Security
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#">
+                            <small>Developer</small>
+                            Course
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </header> 
