try to integrate fontawesome icons + push logo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <title>Netmatters Rebuild by Mark Jason Acab</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/application.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/fontawesome.min.css">
+        
     </head>
     <body>
         <!-- Header -->      
@@ -12,10 +14,10 @@
                     <b class="srt">Netmatters</b>
                 </a>
                 <div class="header-links">
-                    <a href="#">support</a>
-                    <a href="#">contact</a>
-                    <div class="search"><a href="#"><span class="glyphicon glyphicon-search"></span></a></div>
-                    <div class="hamburger"><a href="#"><span class=""></span></a></div>
+                    <a href="#" class="btn"><span class="fas fa-mouse"></span>support</a>
+                    <a href="#" class="btn"><span class="fas fa-paper-plane"></span>contact</a>
+                    <div class="search btn"><a href="#"><span class="fas fa-search"></span></a></div>
+                    <div class="hamburger btn"><a href="#"><span class=""></span></a></div>
                 </div>
             </div>
             <nav class="navbar">
@@ -70,7 +72,7 @@
         <!-- Banner -->
         <div class="grid"></div>
 
-        <!-- Header -->
+        <!-- Content -->
         <div class="grid"></div>
 
         <!-- Footer -->
