removed styles that may affect font icons

--- a/index.html
+++ b/index.html
@@ -14,53 +14,60 @@
                     <b class="srt">Netmatters</b>
                 </a>
                 <div class="header-links">
-                    <a href="#" class="btn"><span class="fas fa-mouse"></span>support</a>
-                    <a href="#" class="btn"><span class="fas fa-paper-plane"></span>contact</a>
-                    <div class="search btn"><a href="#"><span class="fas fa-search"></span></a></div>
-                    <div class="hamburger btn"><a href="#"><span class=""></span></a></div>
+                    <a href="#" class="btn"><i class="fas fa-mouse"></i>support</a>
+                    <a href="#" class="btn"><i class="fas fa-paper-plane"></i>contact</a>
+                    <div class="search btn"><a href="#"><i class="fas fa-search"></i></a></div>
+                    <div class="hamburger btn"><a href="#"><i class=""></i></a></div>
                 </div>
             </div>
             <nav class="navbar">
                 <ul class="nav">
                     <li class="nav__item">
-                        <a href="#">
-                            <small>Bespoke</small>
+                        <a href="#">                            
+                            <span class="fas fa-paper-plane"></span>
+                            <small>Bespoke</small><br>
                             Software
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#">
-                            <small>IT</small>
+                        <a href="#">                            
+                            <span class="fas fa-paper-plane"></span>
+                            <small>IT</small><br>
                             Support
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#">
-                            <small>Digital</small>
+                            <span class="fas fa-paper-plane"></span>
+                            <small>Digital</small><br>
                             Marketing
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#">
-                            <small>Telecoms</small>
+                        <a href="#">                            
+                            <span class="fas fa-paper-plane"></span>
+                            <small>Telecoms</small><br>
                             Services
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#">
-                            <small>Web</small>
+                        <a href="#">                            
+                            <span class="fas fa-paper-plane"></span>
+                            <small>Web</small><br>
                             Design
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#">
-                            <small>Cyber</small>
+                        <a href="#">                            
+                            <span class="fas fa-paper-plane"></span>
+                            <small>Cyber</small><br>
                             Security
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#">
-                            <small>Developer</small>
+                        <a href="#">                            
+                            <span class="fas fa-paper-plane"></span>
+                            <small>Developer</small><br>
                             Course
                         </a>
                     </li>
