use fontaweome kit link

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Netmatters Rebuild by Mark Jason Acab</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/application.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/fontawesome.min.css">
-        
+        <script src="https://kit.fontawesome.com/efff71aefd.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!-- Header -->      
@@ -14,10 +14,10 @@
                     <b class="srt">Netmatters</b>
                 </a>
                 <div class="header-links">
-                    <a href="#" class="btn"><i class="fas fa-mouse"></i>support</a>
-                    <a href="#" class="btn"><i class="fas fa-paper-plane"></i>contact</a>
-                    <div class="search btn"><a href="#"><i class="fas fa-search"></i></a></div>
-                    <div class="hamburger btn"><a href="#"><i class=""></i></a></div>
+                    <a href="#" class="btn support"><i class="fa fa-mouse"></i> Support</a>
+                    <a href="#" class="btn"><i class="far fa-paper-plane"></i> Contact</a>
+                    <a href="#" class="btn search"><i class="fas fa-search"></i></a>
+                    <a href="#" class="btn hamburger"><a href="#"><i class=""></i></a>
                 </div>
             </div>
             <nav class="navbar">
