import and apply poppins font + set root font size + fix button styles

--- a/index.html
+++ b/index.html
@@ -4,69 +4,73 @@
         <title>Netmatters Rebuild by Mark Jason Acab</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/application.css">
+        <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
         <script src="https://kit.fontawesome.com/efff71aefd.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!-- Header -->      
-        <header class="grid"> 
+        <header class="container"> 
             <div class="header">
                 <a class="site-logo" href="/">
                     <b class="srt">Netmatters</b>
                 </a>
                 <div class="header-links">
-                    <a href="#" class="btn support"><i class="fa fa-mouse"></i> Support</a>
-                    <a href="#" class="btn"><i class="far fa-paper-plane"></i> Contact</a>
-                    <a href="#" class="btn search"><i class="fas fa-search"></i></a>
-                    <a href="#" class="btn hamburger"><a href="#"><i class=""></i></a>
+                    <a href="#" class="btn btn-secondary btn-support">
+                        <i class="fa fa-mouse 2f"></i> Support
+                    </a>
+                    <a href="#" class="btn btn-default btn-contact"><i class="far fa-paper-plane"></i> Contact</a>
+                    <a href="#" class="btn btn-default btn-search"><i class="fas fa-search"></i></a>
+                    <a href="#" class="btn btn-primary btn-toggle"><span class="hamburger"><b class="srt">Toggle</b></span></a>                 
+ 
                 </div>
             </div>
             <nav class="navbar">
                 <ul class="nav">
                     <li class="nav__item">
                         <a href="#">                            
-                            <span class="fas fa-paper-plane"></span>
+                            <span class="icon-apps"></span>
                             <small>Bespoke</small><br>
                             Software
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#">                            
-                            <span class="fas fa-paper-plane"></span>
+                            <span class="icon-display"></span>
                             <small>IT</small><br>
                             Support
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#">
-                            <span class="fas fa-paper-plane"></span>
+                            <span class="icon-bar-graph"></span>
                             <small>Digital</small><br>
                             Marketing
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#">                            
-                            <span class="fas fa-paper-plane"></span>
+                            <span class="icon-phone_in_talk"></span>
                             <small>Telecoms</small><br>
                             Services
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#">                            
-                            <span class="fas fa-paper-plane"></span>
+                            <span class="icon-code"></span>
                             <small>Web</small><br>
                             Design
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#">                            
-                            <span class="fas fa-paper-plane"></span>
+                            <span class="icon-security"></span>
                             <small>Cyber</small><br>
                             Security
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#">                            
-                            <span class="fas fa-paper-plane"></span>
+                            <span class="mdi-social-school"></span>
                             <small>Developer</small><br>
                             Course
                         </a>
@@ -77,12 +81,12 @@
         
 
         <!-- Banner -->
-        <div class="grid"></div>
+        <div class="container"></div>
 
         <!-- Content -->
-        <div class="grid"></div>
+        <div class="container"></div>
 
         <!-- Footer -->
-        <div class="grid"></div>
+        <div class="container"></div>
     </body>
 </html>
