finalized navigation icons

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <a class="site-logo" href="/">
                     <b class="srt">Netmatters</b>
                 </a>
-                <div class="header-links">
+                <div class="topbar-links">
                     <a href="#" class="btn btn-secondary btn-support">
-                        <i class="fa fa-mouse 2f"></i> Support
+                        <i class="fa fa-mouse"></i> Support
                     </a>
                     <a href="#" class="btn btn-default btn-contact"><i class="far fa-paper-plane"></i> Contact</a>
                     <a href="#" class="btn btn-default btn-search"><i class="fas fa-search"></i></a>
@@ -27,50 +27,50 @@
             <nav class="navbar">
                 <ul class="nav">
                     <li class="nav__item">
-                        <a href="#">                            
-                            <span class="icon-apps"></span>
+                        <a href="#" class="software">                            
+                            <i class="fas fa-bars"></i><br>
                             <small>Bespoke</small><br>
                             Software
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#">                            
-                            <span class="icon-display"></span>
+                        <a href="#" class="support">                            
+                            <i class="fa fa-tv"></i><br>
                             <small>IT</small><br>
                             Support
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#">
-                            <span class="icon-bar-graph"></span>
+                        <a href="#" class="marketing">
+                            <i class="fas fa-signal"></i><br>
                             <small>Digital</small><br>
                             Marketing
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#">                            
-                            <span class="icon-phone_in_talk"></span>
+                        <a href="#" class="services">                            
+                            <i class="fas fa-phone-alt"></i><br>
                             <small>Telecoms</small><br>
                             Services
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#">                            
-                            <span class="icon-code"></span>
+                        <a href="#" class="design">                            
+                            <i class="fas fa-code"></i><br>
                             <small>Web</small><br>
                             Design
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#">                            
-                            <span class="icon-security"></span>
+                        <a href="#" class="security">                            
+                            <i class="fas fa-shield-alt"></i><br>
                             <small>Cyber</small><br>
                             Security
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#">                            
-                            <span class="mdi-social-school"></span>
+                        <a href="#" class="course">                            
+                            <i class="fas fa-graduation-cap"></i><br>
                             <small>Developer</small><br>
                             Course
                         </a>
