--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <!-- Header -->      
-        <header class="container"> 
-            <div class="header">
+        <header class="container header"> 
+            <div class="topbar">
                 <a class="site-logo" href="/">
                     <b class="srt">Netmatters</b>
                 </a>
@@ -21,8 +21,7 @@
                     <a href="#" class="btn btn-default btn-contact"><i class="far fa-paper-plane"></i> Contact</a>
                     <a href="#" class="btn btn-default btn-search"><i class="fas fa-search"></i></a>
                     <a href="#" class="btn btn-primary btn-toggle"><span class="hamburger"><b class="srt">Toggle</b></span></a>                 
- 
-                </div>
+                 </div>
             </div>
             <nav class="navbar">
                 <ul class="nav">
@@ -78,6 +77,8 @@
                 </ul>
             </nav>
         </header> 
+
+
         
 
         <!-- Banner -->
