add banner section elements

--- a/index.html
+++ b/index.html
@@ -76,13 +76,28 @@
                     </li>
                 </ul>
             </nav>
-        </header> 
-
-
-        
+        </header>         
 
         <!-- Banner -->
-        <div class="container"></div>
+        <div class="container banner">
+            <div class="slideshow">
+                <div class="slide-text">
+                    <h1>
+                        The East Of England's Leading Technology Company
+                    </h1>
+                    <p>
+                        Performance-driven digital and technology services <br>
+                        with complete transparency.
+                    </p>
+                    <div>
+                        <a href="#" class="btn btn-tertiary">
+                            Find out more <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
 
         <!-- Content -->
         <div class="container"></div>
