add the slideshow button elements

--- a/index.html
+++ b/index.html
@@ -96,7 +96,18 @@
                     </div>
 
                 </div>
-            </div>
+            </div>      
+            <div class="slideshow-buttons">
+                <ul class="dots">
+                    <li class="dot active"><span></span></li>
+                    <li class="dot"><span></span></li>
+                    <li class="dot"><span></span></li>                
+                    <li class="dot"><span></span></li>
+                    <li class="dot"><span></span></li>
+                    <li class="dot"><span></span></li>
+                    <li class="dot"><span></span></li>
+                </ul>
+            </div>      
         </div>
 
         <!-- Content -->
