add class to each service section

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
                 <div class="row">
                     <div class="col-4">
-                        <a class="card">
+                        <a class="card card-software">
                             <i class="fas fa-bars"></i>
                             <h2>Bespoke Software</h2>
                             <p>Bespoke software solutions for all your business needs including integrations and reporting.</p>
@@ -166,7 +166,7 @@
                         </a>
                     </div>
                     <div class="col-4">
-                        <a class="card">
+                        <a class="card card-support">
                             <i class="fas fa-tv"></i>
                             <h2>IT Support</h2>
                             <p>Fully managed IT support and consultancy packages tailored to meet your exact business needs.</p>
@@ -174,7 +174,7 @@
                         </a>
                     </div>
                     <div class="col-4">
-                        <a class="card"> 
+                        <a class="card card-marketing"> 
                             <i class="fas fa-signal"></i>
                             <h2>Digital Marketing</h2>
                             <p>Driven brand awareness & ROI through creative digital marketing campaigns.</p>
@@ -185,7 +185,7 @@
 
                 <div class="row">
                     <div class="col-3">
-                        <a class="card">
+                        <a class="card card-services">
                             <i class="fas fa-phone-alt"></i>
                             <h2>Telecoms Services</h2>
                             <p>Business telephony solutions including mobile & connectivity solutions.</p>
@@ -193,7 +193,7 @@
                         </a>
                     </div>
                     <div class="col-3">
-                        <a class="card">
+                        <a class="card card-design">
                             <i class="fas fa-code"></i>
                             <h2>Web Design</h2>
                             <p>User-centric design for businesses looking to make a lasting impression.</p>
@@ -201,7 +201,7 @@
                         </a>
                     </div>
                     <div class="col-3">
-                        <a class="card"> 
+                        <a class="card card-security"> 
                             <i class="fas fa-shield-alt"></i>
                             <h2>Cyber Security</h2>
                             <p>Prevention, testing, consultancy & breach management services.</p>
@@ -209,7 +209,7 @@
                         </a>  
                     </div>
                     <div class="col-3">
-                        <a class="card"> 
+                        <a class="card card-training"> 
                             <i class="fas fa-graduation-cap"></i>
                             <h2>Developer Training</h2>
                             <p>Web design & software training courses designed to secure a job in tech.</p>
