add about section elements and style + moved utilities /config to the top of application.scss

--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
                         </div>                          
                     </div>
                 </div>
-            </div>      
-
+            </div>
     
         </div>
 
@@ -257,6 +256,29 @@
             </div>
         </div>
  
+        <!-- About -->
+        <div class="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="inner">
+                            <h2>Welcome to Netmatters</h2>
+                            <p><strong>Netmatters is a leading <a href="#">Bespoke Software</a>, <a href="#">IT Support</a>, and <a href="#">Digital Marketing</a> company based in the East of England with offices in <a href="#">Cambridge</a>, <a href="#">Wymondham</a>, and <a href="#">Great Yarmouth</a>.</strong></p>
+                            <p>We aren't tied into contracts with third-party providers, so you know that our recommendations for your business are based purely with one benefit in mind: to help improve your business with the most appropriate solutions.</p>                        
+                            <p>We pride ourselves on being an ethical business and have a unique business offering and cost model that ensures you get the most from our relationship in an upfront manner.</p>
+                        </div>                       
+                    </div>
+                    <div class="col-6">
+                        <div class="inner">
+                            <h2>What Our Clients Think</h2>
+                            <p class="client-quote">Netmatters stood out from the start. Great guys and very easy to work with. Both the build and digital marketing teams are clearly skilled -they know their stuff! They delivered a website to our (high!) expectations and went over and above to ensure we were satisfied clients - and we are!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
         <!-- Footer -->
         <div class="container"></div>
     </body>
